[project]
name = "ISLP"
dependencies = ["numpy>=1.7.1",
               "scipy>=0.9",
               "pandas>=1.5",
               "lxml", # pandas needs this for html
               "scikit-learn>=1.2",
               "joblib",
               "statsmodels>=0.13",
               "lifelines",
               "pygam", # for GAM in Ch7
               "torch",
               "pytorch_lightning",
               "torchmetrics",
               ]
description  = "Library for ISLP labs"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
authors = [
    {name = "Trevor Hastie", email="hastie@stanford.edu" },
    {name = "Gareth James", email="gareth@emory.edu"},
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" },
    {name = "Rob Tibshirani", email="tibs@stanford.edu" },
    {name = "Daniela Witten", email="dwitten@uw.edu" },    
    ]  
maintainers = [
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" },
    ]
classifiers = ["Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: OS Independent",
               "Programming Language :: Python",
               "Topic :: Scientific/Engineering"
	       ]
dynamic = ["version"]

[tool.setuptools]
packages = [
    "ISLP",
    "ISLP.models", 
    "ISLP.bart",
    "ISLP.torch",
    "ISLP.data"
]
include-package-data = true

[tool.setuptools.package-data]
ISLP = ["data/*.csv", "data/*.npy", "data/*.data"]

[tool.setuptools.dynamic]
version = {attr = "ISLP.__version__"}  # Assuming ISLP.__version__ holds your version


[project.urls]  # Optional
"Homepage" = "https://github.com/intro-stat-learning/ISLP"
"Bug Reports" = "https://github.com/intro-stat-learning/ISLP/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"
  
[project.optional-dependencies]
doc = ['Sphinx>=3.0']
test = ['torchinfo', 'torchvision']

[build-system]
requires = ["setuptools>=42",
            "wheel",
	    "Sphinx>=1.0",
            "numpy",
            "pandas",
            "scipy",
            "scikit-learn",
            "joblib",
            "statsmodels",
	    "versioneer[toml]"
	    ]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "ISLP/_version.py"
versionfile_build = "ISLP/_version.py"
tag_prefix = "v"
parentdir_prefix = "ISLP-"
